[package]
name = "blocking-http-server"
version = "0.1.2"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = "A simple Blocking HTTP server library"
license = "MIT"
repository = "https://github.com/hangj/blocking-http-server"
documentation = "https://docs.rs/blocking-http-server/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

[dependencies]
bytes = "1.10.0"
http = "1.2.0"
httparse = "1.10.0"

[dev-dependencies]
anyhow = "1.0.97"
